# python-fundamental

.github/workflows/: ci.yml
flask-project/: .coveragerc  Dockerfile  conftest.py  db.py  docker-compose.yaml  env.example  main.py  pyproject.toml  pytest.ini
flask-project/.devcontainer/: devcontainer.json
flask-project/config/: dev.py  settings.py  testing.py
flask-project/migrations/versions/: 1374d7bcdf24_alter_user_table.py  c6a3dc2e63ed_user_model.py
flask-project/models/: user.py
flask-project/router/: auth.py  home.py  profile.py  user.py
flask-project/services/: __init__.py  todo_service.py
flask-project/test/: test_services.py  test_trial.py  test_user.py  test_user_profile.py
flask-project/utils/: profile_utils.py
flask-project/utils/test/: test_utilities.py
intro/: conditional.py  data_type.py  exception_handler.py  iteration.py
lecture2/: dictio.py  dtype.py  func.py  tuplist.py
lecture3/: theobject.py  theobject2.py
project/: main.py  utils.py
python-test-basic/: conftest.py  pyproject.toml  utils.py
python-test-basic/tests/: test_app.py  test_coba.py
